--- a/manageTool/pom.xml
+++ b/manageTool/pom.xml
@@ -42,6 +42,36 @@
 	    <artifactId>jfreechart</artifactId>
 	    <version>1.5.0</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.15</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-nop</artifactId>
+	    <version>1.8.0-beta4</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-log4j12</artifactId>
+	    <version>1.8.0-beta4</version>
+	    <scope>test</scope>
+	</dependency>
+	
+		
+	
+	
+	
+	
+	
     
     
   </dependencies>
